--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  firebase_auth: ^0.16.1
+  firebase_core: ^0.4.5
+  cloud_firestore: ^0.13.7
+  animated_floatactionbuttons: ^0.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
