--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
 
   firebase_core: ^0.4.5
   cloud_firestore: ^0.12.3
-  firebase_auth: ^0.11.1+6
+  firebase_auth: ^0.16.1
   animated_floatactionbuttons: ^0.1.0
   fab_circular_menu: ^1.0.0
   # The following adds the Cupertino Icons font to your application.
