--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   firebase_auth: ^0.16.1
   animated_floatactionbuttons: ^0.1.0
   fab_circular_menu: ^1.0.0
+  random_string: ^2.1.0
+  mailgun: ^0.1.0
+
   provider:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
