--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,14 @@ dependencies:
     sdk: flutter
 
   firebase_core: ^0.4.5
+  firebase_storage: ^3.1.6
   cloud_firestore: ^0.12.3
   firebase_auth: ^0.16.1
   animated_floatactionbuttons: ^0.1.0
   fab_circular_menu: ^1.0.0
   random_string: ^2.1.0
   mailgun: ^0.1.0
+  image_picker: ^0.6.7+4
 
   provider:
   # The following adds the Cupertino Icons font to your application.
