--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   random_string: ^2.1.0
   mailgun: ^0.1.0
   flutter_dotenv: ^2.1.0
+  flutter_spinkit: ^4.1.2+1
+
 
   provider: ^4.3.0
   # The following adds the Cupertino Icons font to your application.
