--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   mailgun: ^0.1.0
   flutter_dotenv: ^2.1.0
   flutter_spinkit: ^4.1.2+1
+  autocomplete_textfield: ^1.7.3
+
 
 
   provider: ^4.3.0
