--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fab_circular_menu: ^1.0.0
   random_string: ^2.1.0
   mailgun: ^0.1.0
+  image_picker: ^0.6.7+4
   flutter_dotenv: ^2.1.0
   flutter_spinkit: ^4.1.2+1
   flutter_typeahead: ^1.8.5
