--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   flutter_typeahead: ^1.8.5
   flutter_keyboard_visibility: ^3.2.1
+  image_picker: ^0.6.4
 
 
   provider: ^4.3.0
