--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_typeahead: ^1.8.5
   flutter_keyboard_visibility: ^3.2.1
   image_picker: ^0.6.7+4
+  file_picker: ^1.12.0
 
 
   provider: ^4.3.0
