--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^0.5.8
   flutter_typeahead: ^1.8.5
   flutter_keyboard_visibility: ^3.2.1
+  file_picker: ^1.12.0
 
   provider: ^4.3.0
   # The following adds the Cupertino Icons font to your application.
