--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^0.6.7+4
   file_picker: ^1.12.0
   shared_preferences: ^0.5.8
+  flutter_svg: ^0.18.0
 
   provider: ^4.3.0
   # The following adds the Cupertino Icons font to your application.
@@ -63,8 +64,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - img1.jpg
+    - img2.jpg
+    - img3.jpg
+    - img4.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
