--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   image_picker: ^0.6.7+4
   file_picker: ^1.12.0
   shared_preferences: ^0.5.8
-  flutter_svg: ^0.18.0
+  carousel_slider: ^1.3.0
+  
 
   provider: ^4.3.0
   # The following adds the Cupertino Icons font to your application.
