--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   image_picker: ^0.6.7+4
   file_picker: ^1.12.0
   shared_preferences: ^0.5.8
+  url_launcher: ^5.5.0
+  carousel_slider: ^1.3.0
 
   provider: ^4.3.0
   # The following adds the Cupertino Icons font to your application.
@@ -63,8 +65,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/audi.jpg
+    - assets/images/audi2.jpg
+    - assets/images/audi3.jpg
+    - assets/images/audi4.jpg
+    - assets/images/audi5.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
