--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^0.5.8
   url_launcher: ^5.5.0
   carousel_slider: ^1.3.0
+  # cloud_firestore: ^0.13.7
 
   provider: ^4.3.0
   # The following adds the Cupertino Icons font to your application.
