--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
   firebase_core: ^0.4.5
+  intl: ^0.16.0
   firebase_storage: ^3.1.6
   cloud_firestore: ^0.12.3
   firebase_auth: ^0.16.1
