--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   shared_preferences: ^0.5.8
   url_launcher: ^5.5.0
   carousel_slider: ^1.3.0
-  flutter_svg: ^0.17.0
+  flutter_svg: ^0.18.0
+  hexcolor: ^1.0.4
   # cloud_firestore: ^0.13.7
 
   provider: ^4.3.0
