--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_typeahead: ^1.8.6
   flutter_keyboard_visibility: ^3.2.1
   image_picker: ^0.6.7+4
-  file_picker: ^1.12.0
+  file_picker: ^1.13.0+1
   shared_preferences: ^0.5.8
   url_launcher: ^5.5.0
   carousel_slider: ^1.3.0
