--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   flutter_svg: ^0.17.0
   hexcolor: ^1.0.4
   fluttertoast: ^7.0.2
+  zoom_widget: ^0.1.3
+  photo_view: ^0.9.2
+  http: ^0.12.1
+  path_provider: ^1.6.7
   # cloud_firestore: ^0.13.7
 
   provider: ^4.3.0
