--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   photo_view: ^0.9.2
   http: ^0.12.1
   path_provider: ^1.6.7
+  flushbar: ^1.10.4
   # cloud_firestore: ^0.13.7
 
   provider: ^4.3.0
