--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   firebase_core: ^0.4.5
   intl: ^0.16.0
+  flutter_native_image: ^0.0.5
   firebase_storage: ^3.1.6
   cloud_firestore: ^0.12.3
   firebase_auth: ^0.16.1
@@ -51,6 +52,7 @@ dependencies:
   http: ^0.12.1
   path_provider: ^1.6.7
   flushbar: ^1.10.4
+  
   # cloud_firestore: ^0.13.7
 
   provider: ^4.3.0
