--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_core: ^0.4.5
   intl: ^0.16.0
   flutter_native_image: ^0.0.5
+  flutter_image_compress: ^0.7.0
   firebase_storage: ^3.1.6
   cloud_firestore: ^0.12.3
   firebase_auth: ^0.16.1
