--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,19 +78,19 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-# New app launcher icon
-flutter_icons:
-  image_path: 'assets/images/yoda.png'
-  android: true
-  ios: true
-
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env   
     - assets/images/yoda.png
     - assets/images/nophoto.jpg
+    - assets/images/logo.png
     
 
+    # New app launcher icon
+flutter_icons:
+  image_path: 'assets/images/logo.png'
+  android: true
+  ios: true
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
