--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,14 +96,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Roboto
-  #     fonts:
-  #       - asset: assets/fonts/Roboto-Medium.ttf
-  #         weight: 700
-  #       - asset: assets/fonts/Roboto-Regular.ttf
-  #         weight: 700
-  fonts:        
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 700
+        - asset: assets/fonts/Roboto-Regular.ttf
+          weight: 700
+      
     - family: Amaranth
       fonts:
         - asset: assets/fonts/Amaranth-Regular.ttf
