--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   http: ^0.12.1
   path_provider: ^1.6.7
   flushbar: ^1.10.4
+  meet_network_image: ^0.1.2
+  cached_network_image: ^2.2.0+1
   
     
   # cloud_firestore: ^0.13.7
