--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
   firebase_core: ^0.4.5
+  animated_text_kit: ^2.2.0
   flutter_launcher_icons: ^0.7.5
   intl: ^0.16.0
   flutter_native_image: ^0.0.5
@@ -56,7 +57,7 @@ dependencies:
   flushbar: ^1.10.4
   meet_network_image: ^0.1.2
   cached_network_image: ^2.2.0+1
-  
+    
     
   # cloud_firestore: ^0.13.7
 
