--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ app.*.symbols
 app.*.map.json
 
 
+# Android related
+**/android/key.properties
+
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
